--- a/index.html
+++ b/index.html
@@ -3,17 +3,13 @@
 <head>
   <title>Форма приема заявки</title>
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montressat:wght@200;500&display=swap');
     /* Общие стили */
     body {
-      font-family: Arial, sans-serif;
-      margin: 20px;
-      --tg-theme-bg-color: #ffffff;
-      --tg-theme-text-color: #000000;
-      --tg-theme-hint-color: #999999;
-      --tg-theme-link-color: #0088cc;
-      --tg-theme-button-color: #0088cc;
-      --tg-theme-button-text-color: #ffffff;
-      --tg-theme-secondary-bg-color: #f2f2f2;
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 200;
+        color: var(--tg-theme-text-color);
+        background: var(--tg-theme-bg-color);
     }
     
     h1 {
@@ -103,5 +99,6 @@
     
     <button type="submit">Отправить заявку</button>
   </form>
+  <script src="https://telegram.org/js/telegram-web-app.js"></script>
 </body>
 </html>
