--- a/index.html
+++ b/index.html
@@ -1,447 +1,106 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="initial-scale=1, width=device-width" />
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="./index.css" />
-    <link
-      rel="stylesheet"
-      href="https://fonts.googleapis.com/css2?family=Proxima Nova:wght@400;600&display=swap"
-    />
-  </head>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Useful Work</title>
+
   <style>
+    @import url('https://fonts.googleapis.com/css2?family=Montressat:wght@200;500&display=swap');
+
+    * {
+        margin: 0;
+        padding: 0;
+        box-sizing: border-box;
+    }
+
     body {
-  margin: 0;
-  line-height: normal;
-}
+        font-family: 'Montserrat', sans-serif;
+        font-weight: 200;
+        color: var(--tg-theme-text-color);
+        background: var(--tg-theme-bg-color);
+    }
 
-:root {
-  /* fonts */
-  --font-proxima-nova: "Proxima Nova";
+    #main {
+        width: 100%;
+        padding: 20px;
+        text-align: center;
+    }
 
-  /* font sizes */
-  --font-size-sm: 14px;
+    h1 {
+        margin-top: 50px;
+        margin-bottom: 10px;
+    }
 
-  /* Colors */
-  --grey-600: #768898;
-  --color-white: #fff;
-  --grey-300: #d8dde3;
-  --grey-700: #4c5c6b;
-  --color-chocolate: #d95117;
-  --grey-800: #262e36;
-  --grey-100: #f6f7f9;
-  --grey-200: #eef0f1;
+    img {
+        width: 70px;
+        margin: 30px auto;
+    }
 
-  /* Gaps */
-  --gap-base: 16px;
-  --gap-xs: 12px;
-  --gap-11xs: 2px;
+    p {
+        width: 350px;
+        margin: 0 auto;
+    }
 
-  /* Paddings */
-  --padding-xs: 12px;
-  --padding-base: 16px;
-  --padding-5xs: 8px;
+    button {
+        border: 0;
+        border-radius: 5px;
+        margin-top: 50px;
+        height: 60px;
+        width: 200px;
+        font-size: 20px;
+        font-weight: 500;
+        cursor: pointer;
+        transition: all 500ms ease;
+        color: var(--tg-theme-button-color);
+        background-color: var(--tg-theme-button-text-color);
+    }
 
-  /* border radiuses */
-  --br-5xs: 8px;
-}
-.div,
-.selected-field {
-  position: relative;
-  font-weight: 600;
-}
-.selected-field {
-  letter-spacing: -0.02em;
-  line-height: 100%;
-}
-.div {
-  color: var(--color-chocolate);
-}
-.selected-field-parent {
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: flex-start;
-  gap: var(--gap-11xs);
-}
-.title {
-  position: relative;
-  font-weight: 600;
-}
-.vector-icon {
-  position: relative;
-  width: 6.86px;
-  height: 6.86px;
-}
-.title-parent {
-  border-radius: 4px;
-  background-color: var(--grey-100);
-  display: flex;
-  flex-direction: row;
-  padding: var(--padding-5xs) var(--padding-xs);
-  align-items: center;
-  justify-content: flex-start;
-  gap: 10px;
-}
-.vuesaxlineararrow-down-icon {
-  position: relative;
-  width: 10px;
-  height: 10px;
-}
-.vuesaxlineararrow-down-wrapper {
-  display: flex;
-  flex-direction: row;
-  padding: 0 var(--padding-5xs);
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.frame-group {
-  border-radius: var(--br-5xs);
-  background-color: var(--color-white);
-  box-shadow: 0 0 4px rgba(23, 25, 28, 0.05);
-  border: 1px solid var(--grey-300);
-  box-sizing: border-box;
-  width: 511px;
-  display: flex;
-  flex-direction: row;
-  padding: 4px;
-  align-items: center;
-  justify-content: space-between;
-  color: var(--grey-700);
-}
-.frame-parent {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-xs);
-}
-.enter-field-description {
-  position: relative;
-  line-height: 100%;
-  color: var(--grey-600);
-}
-.property-1selected-field {
-  position: absolute;
-  top: 162px;
-  left: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-base);
-}
-.div1 {
-  position: relative;
-  letter-spacing: 0.02em;
-  font-weight: 600;
-  color: var(--color-chocolate);
-}
-.vuesaxlinearcalendar-icon {
-  position: relative;
-  width: 14px;
-  height: 14px;
-}
-.dmyyyy-hmm-m-parent {
-  border-radius: var(--br-5xs);
-  background-color: var(--color-white);
-  box-shadow: 0 0 4px rgba(23, 25, 28, 0.05);
-  border: 1px solid var(--grey-300);
-  box-sizing: border-box;
-  width: 511px;
-  display: flex;
-  flex-direction: row;
-  padding: var(--padding-xs) var(--padding-base);
-  align-items: center;
-  justify-content: space-between;
-  color: var(--grey-700);
-}
-.auto-generate,
-.enter-field-description1 {
-  position: relative;
-  line-height: 100%;
-}
-.auto-generate {
-  font-weight: 600;
-  color: var(--grey-700);
-}
-.enter-field-description-parent {
-  align-self: stretch;
-  display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-between;
-  color: var(--grey-600);
-}
-.property-1date-field {
-  position: absolute;
-  top: 20px;
-  left: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-base);
-}
-.tablercurrency-naira-icon {
-  position: relative;
-  width: 14.4px;
-  height: 12px;
-  overflow: hidden;
-  flex-shrink: 0;
-}
-.div3 {
-  position: relative;
-  line-height: 120%;
-  font-weight: 600;
-}
-.frame-child {
-  background-color: var(--color-white);
-}
-.frame-child,
-.frame-item {
-  position: relative;
-  border-radius: 50%;
-  width: 14px;
-  height: 14px;
-}
-.ellipse-parent,
-.property-1price-field {
-  display: flex;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.ellipse-parent {
-  border-radius: 20px;
-  background-color: var(--grey-200);
-  box-shadow: 0 0 4px rgba(23, 25, 28, 0.05);
-  overflow: hidden;
-  flex-direction: row;
-  padding: 2px;
-  gap: var(--gap-11xs);
-}
-.property-1price-field {
-  position: absolute;
-  top: 862px;
-  left: 21px;
-  flex-direction: column;
-  gap: var(--gap-xs);
-}
-.vuesaxlineararrow-down-icon2 {
-  position: relative;
-  width: 10px;
-  height: 10px;
-  margin-top: -2px;
-}
-.property-1quantity-field,
-.vuesaxlineararrow-down-parent {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-}
-.property-1quantity-field {
-  position: absolute;
-  top: 704px;
-  left: 20px;
-  gap: var(--gap-base);
-}
-.div6,
-.div7 {
-  position: relative;
-}
-.div6 {
-  letter-spacing: 0.02em;
-  font-weight: 600;
-  color: var(--color-chocolate);
-  display: none;
-}
-.div7 {
-  line-height: 100%;
-  color: var(--grey-700);
-}
-.frame-parent1 {
-  width: 509px;
-  display: flex;
-  flex-direction: row;
-  align-items: center;
-  justify-content: space-between;
-}
-.a-very-long {
-  flex: 1;
-  position: relative;
-  line-height: 175%;
-  font-weight: 600;
-}
-.a-very-long-line-of-text-which-wrapper {
-  border-radius: var(--br-5xs);
-  background-color: var(--color-white);
-  box-shadow: 0 0 4px rgba(23, 25, 28, 0.05);
-  border: 1px solid var(--grey-300);
-  box-sizing: border-box;
-  width: 511px;
-  display: flex;
-  flex-direction: row;
-  padding: var(--padding-xs) var(--padding-base);
-  align-items: center;
-  justify-content: flex-start;
-  color: var(--grey-700);
-}
-.property-1char-field,
-.property-1textarea-field {
-  position: absolute;
-  top: 534px;
-  left: 20px;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: flex-start;
-  gap: var(--gap-xs);
-}
-.property-1char-field {
-  top: 348px;
-  gap: var(--gap-base);
-}
-.component-2 {
-  position: relative;
-  border-radius: 5px;
-  border: 1px dashed #9747ff;
-  box-sizing: border-box;
-  width: 100%;
-  height: 982px;
-  overflow: hidden;
-  text-align: left;
-  font-size: var(--font-size-sm);
-  color: var(--grey-800);
-  font-family: var(--font-proxima-nova);
-}
-    
+    button:hover {
+        background: var(--tg-theme-secondary-bg-color);
+    }
+
   </style>
-  <body>
-    <div class="component-2">
-      <div class="property-1selected-field">
-        <div class="frame-parent">
-          <div class="selected-field-parent">
-            <div class="selected-field">Selected Field</div>
-            <div class="div">*</div>
-          </div>
-          <div class="frame-group">
-            <div class="title-parent">
-              <div class="title">Title</div>
-              <img class="vector-icon" alt="" src="./public/vector.svg" />
-            </div>
-            <div class="vuesaxlineararrow-down-wrapper">
-              <img
-                class="vuesaxlineararrow-down-icon"
-                alt=""
-                src="./public/vuesaxlineararrowdown.svg"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="enter-field-description">Enter field description</div>
-      </div>
-      <div class="property-1date-field">
-        <div class="frame-parent">
-          <div class="selected-field-parent">
-            <div class="selected-field">Date Field</div>
-            <div class="div1">*</div>
-          </div>
-          <div class="dmyyyy-hmm-m-parent">
-            <div class="title">D/M/YYYY H:MM M</div>
-            <img
-              class="vuesaxlinearcalendar-icon"
-              alt=""
-              src="./public/vuesaxlinearcalendar.svg"
-            />
-          </div>
-        </div>
-        <div class="enter-field-description-parent">
-          <div class="enter-field-description1">Enter field description</div>
-          <div class="auto-generate">Auto-generate</div>
-        </div>
-      </div>
-      <div class="property-1price-field">
-        <div class="selected-field-parent">
-          <div class="selected-field">Price Field</div>
-          <div class="div1">*</div>
-        </div>
-        <div class="dmyyyy-hmm-m-parent">
-          <img
-            class="tablercurrency-naira-icon"
-            alt=""
-            src="./public/tablercurrencynaira.svg"
-          />
+</head>
+<body>
+    <form id="form">
+        <input type="text" placeholder="Имя" id="user_firstname">
+        <input type="text" placeholder="Фамилия" id="user_lastname">
+        <input type="tel" placeholder="Номер" id="user_phone">
+        <button id="add_ad">Добавить объявление</button>
+    </form>
 
-          <div class="div3">0.00</div>
-        </div>
-        <div class="enter-field-description-parent">
-          <div class="enter-field-description1">Enter field description</div>
-          <div class="ellipse-parent">
-            <div class="frame-child"></div>
-            <div class="frame-item"></div>
-          </div>
-        </div>
-      </div>
-      <div class="property-1quantity-field">
-        <div class="frame-parent">
-          <div class="selected-field-parent">
-            <div class="selected-field">Quantity Field</div>
-            <div class="div">*</div>
-          </div>
-          <div class="dmyyyy-hmm-m-parent">
-            <div class="title">0</div>
-            <div class="vuesaxlineararrow-down-parent">
-              <img
-                class="vuesaxlineararrow-down-icon"
-                alt=""
-                src="./public/vuesaxlineararrowdown1.svg"
-              />
-
-              <img
-                class="vuesaxlineararrow-down-icon2"
-                alt=""
-                src="./public/vuesaxlineararrowdown2.svg"
-              />
-            </div>
-          </div>
-        </div>
-        <div class="enter-field-description">Enter field description</div>
-      </div>
-      <div class="property-1textarea-field">
-        <div class="frame-parent1">
-          <div class="selected-field-parent">
-            <div class="selected-field">TextArea Field</div>
-            <div class="div6">*</div>
-          </div>
-          <div class="div7">75</div>
-        </div>
-        <div class="a-very-long-line-of-text-which-wrapper">
-          <div class="a-very-long">
-            A very long line of text which is expected to span more than two to
-            three lines so it breaks as the text increases.
-          </div>
-        </div>
-        <div class="enter-field-description">Enter field description</div>
-      </div>
-      <div class="property-1char-field">
-        <div class="frame-parent">
-          <div class="frame-parent1">
-            <div class="selected-field-parent">
-              <div class="selected-field">Char field</div>
-              <div class="div1">*</div>
-            </div>
-            <div class="div7">31</div>
-          </div>
-          <div class="a-very-long-line-of-text-which-wrapper">
-            <div class="title">Title</div>
-          </div>
-        </div>
-        <div class="enter-field-description">Enter field description</div>
-      </div>
-    </div>
     <script src="https://telegram.org/js/telegram-web-app.js"></script>
+    <script>
+        let tg = window.Telegram.WebApp;
+        let add_ad = document.getElementById("add_ad");
+        tg.expend();
 
-  </body>
+        add_ad.addEventListener("click", () => {
+            // document.getElementById("user_firstname").value = tg.initDataUnsafe.user.firstname;
+            // document.getElementById("user_lastname").value = tg.initDataUnsafe.user.lastname;
+            // tg.close();
+
+            let user_id = tg.initDataUnsafe.user.id;
+            let tgname = tg.initDataUnsafe.user.firstname;
+            let tglastname = tg.initDataUnsafe.user.lastname;
+            let name = document.getElementById("user_firstname");
+            let lastname = document.getElementById("user_lastname");
+            let phone = document.getElementById("user_phone");
+
+            let data = {
+                user_id: user_id,
+                tgname: tgname,
+                tglastname: tglastname,
+                name: name,
+                lastname: lastname,
+                phone: phone
+            }
+            tg.sendData(JSON.stringify(data));
+
+            tg.close();
+        })
+
+    </script>
+</body>
 </html>
