--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             let user_id = document.getElementById("user_phone").value;
 
             let data = {
-                username: username,
+                username: user_name,
                 user_lastname: user_lastname,
                 user_id: user_id
             }
