--- a/index.html
+++ b/index.html
@@ -87,9 +87,9 @@
         buy.addEventListener("click", () => {
             document.getElementById("main").style.display = "none";
             document.getElementById("form").style.display = "block";
-            // document.getElementById("user_name").value = tg.initDataUnsafe.user.first_name;
-            // document.getElementById("user_lastname").value = tg.initDataUnsafe.user.last_name;
-            // document.getElementById("user_phone").value = tg.initDataUnsafe.user.id;
+            document.getElementById("user_name").value = tg.initDataUnsafe.user.first_name;
+            document.getElementById("user_lastname").value = tg.initDataUnsafe.user.last_name;
+            document.getElementById("user_phone").value = tg.initDataUnsafe.user.id;
         });
 
         add_ad.addEventListener("click", () => {
