--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
         send.addEventListener("click", () => {
             let name = document.getElementById("name").value;
-            let user_id = tg.initDataUnsafe.user.id;
+            // let user_id = tg.initDataUnsafe.user.id;
 
             tg.sendData("some string that we need to send"); 
 
