--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             let name = document.getElementById("name").value;
             // let user_id = tg.initDataUnsafe.user.id;
 
-            tg.sendData("some string that we need to send"); 
+            tg.sendData(name); 
 
             tg.close();
         });
