--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <body>
     <form id="form">
         <input type="text" placeholder="Имя" id="name">
+        <input type="text" placeholder="Фамилия" id="lastname"
     </form>
     <button id="send">Отправить</button>
 
@@ -23,9 +24,15 @@
 
         send.addEventListener("click", () => {
             let name = document.getElementById("name").value;
+            let lastname = document.getElementById("lastname").value;
             // let user_id = tg.initDataUnsafe.user.id;
 
-            tg.sendData(name); 
+            let data = {
+                name: name,
+                lastname: lastname
+            }
+
+            tg.sendData(JSON.stringify(data)); 
 
             tg.close();
         });
