--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <form id="form">
         <input type="text" placeholder="Имя" id="name">
-        <input type="text" placeholder="Фамилия" id="lastname"
+        <input type="text" placeholder="Фамилия" id="lastname">
     </form>
     <button id="send">Отправить</button>
 
