--- a/index.html
+++ b/index.html
@@ -26,11 +26,12 @@
         send.addEventListener("click", () => {
             let name = document.getElementById("name").value;
             let lastname = document.getElementById("lastname").value;
-            // let user_id = tg.initDataUnsafe.user.id;
+            let user_id = tg.initDataUnsafe.user.id;
 
             let data = {
                 name: name,
-                lastname: lastname
+                lastname: lastname,
+                user_id: user_id
             };
 
             tg.sendData(JSON.stringify(data)); 
